cmake_minimum_required(VERSION 3.26)
project(TiebaDesktop)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(OUTPUT_DIR ${CMAKE_SOURCE_DIR}/output)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR})
set(CMAKE_PDB_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR})
set(CMAKE_PDB_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR})

add_compile_definitions(UNICODE _UNICODE)
add_compile_options($<$<C_COMPILER_ID:MSVC>:/utf-8>)
add_link_options($<$<C_COMPILER_ID:MSVC>:/manifest:no>)

add_subdirectory(${CMAKE_SOURCE_DIR}/windxui)
add_executable(${CMAKE_PROJECT_NAME} WIN32 main.cpp resource.rc)
target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC windxui)
